# eventpulse

./: .env.example  .gitignore  README.md  docker-compose.yml  kafka_consumer_test.py  kafka_producer_test.py  pyproject.toml
apps/common/: models.py  urls.py  views.py
apps/common/kafka/: consumer.py  producer.py
apps/teams/: apps.py  constants.py  models.py
apps/teams/migrations/: 0001_initial.py  0002_alter_teampermissiondoc_is_active_and_more.py
configs/: asgi.py  urls.py
configs/settings/: base.py  configs.py  installed_apps.py
eventpulse-python/: pyproject.toml
eventpulse-python/configs/: urls.py  wsgi.py
eventpulse-python/configs/settings/: base.py  configs.py  installed_apps.py
workers/: base_consumer.py  event_consumer.py
