[project]
name = "kafka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.12.2",
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "loguru>=0.7.3",
    "psycopg>=3.2.12",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "whitenoise>=6.11.0",
]
